routes/index/index.css
@import '../../colors.css';
@import '../../media.css';

:local(.className) {
  display: flex;
  flex-direction: column;

  h2 {
    margin-top: 0;

    select {
      font-size: large;
    }
  }

  #header {
    h1 {
      margin-bottom: 1.5rem;
    }
    h3 {
      margin-bottom: 3rem;
    }
  }

  #hero {
    > .container-fluid {
      margin-bottom: 3rem;
      background: url('/images/hero-1.jpg') 50% 50%;
      background-size: cover;
      height: 50vh;
      @media (--md-viewport) {
        height: 60vh;
      }
    }
  }

  #about, #get-involved, #sponsors, #transparency {
    .row {
      .col-sm-6:first-of-type {
        margin-bottom: 1.5rem;
      }
    }
  }

  #about {
    .people {
      display: flex;
      flex-wrap: wrap;
      justify-content: center;
      align-items: center;
      align-content: center;
      min-height: 210px;
    }
    img {
      border-radius: 100%;
      height: auto;
      margin: 3px;
    }
  }

  #get-involved {
    order: 1;
    &.tba { order: 0 }
  }

  #schedule {
    .container-fluid {
      background: linear-gradient(var(--tan-translucent), var(--tan-translucent)),
                  url('../../images/computer.svg') 100% 0%,
                  url('../../images/waffle.svg') 100% 50%,
                  url('../../images/microphone.svg') 100% 100%;
      background-repeat: no-repeat;
      @media (--sm-viewport) {
        background: url('../../images/computer.svg') 80% 0%,
                    url('../../images/waffle.svg') 80% 50%,
                    url('../../images/microphone.svg') 80% 100%;
        background-repeat: no-repeat;
        background-size: 25%;
      }
    }
  }

  ul.schedule {
    list-style-type: none;
    color: inherit;
    padding: 0;

    li > .row {
      align-items: baseline;
    }

    .border-bottom > * {
      padding-bottom: 2rem;
      margin-bottom: 2rem;
      border-bottom: solid 1px var(--lighter-gray);
    }

    [marked] p:first-child {
      margin-top: 0;
    }

    /* undo the effects of markdown's inherent <p> tag */
    h3[marked] p {
      margin: 0;
      color: inherit;
      line-height: 150%;
    }

    .separator {
      margin: 0 .5em;
      font-weight: normal;
    }

    .person {
      white-space: nowrap;
      line-height: 150%;
    }
  }

  #sponsors {
    svg {
      vertical-align: center;
    }
  }
}

